modified:   cmd/.env modified:   docs/docs.go modified:   docs/swagger.json modified:   docs/swagger.yaml modified:   go.mod modified:   go.sum modified:   internal/adapter/inbound/http/handler.go modified:   internal/adapter/outbound/persistence/mysql.go modified:   internal/adapter/outbound/persistence/psql.go modified:   internal/application/service.go new file:   test/http_test.go new file:   test/integration_test.go new file:   test/service_test.go
